--- a/force-app/main/tests/classes/TestDataFactory.cls
+++ b/force-app/main/tests/classes/TestDataFactory.cls
@@ -10,7 +10,7 @@ public class TestDataFactory {
                     'Study_Title__c' => 'Test Study Title',
                     'Study_Code_Name__c' => 'Test Study Code Name',
                     'NCT_Number__c' => 'NCT00000000',
-                    'Synch_with_TMDH__c' => 'true'
+                    'Synch_with_TMDH__c' => true
             },
 
             Contact.getSObjectType() => new Map<String, Object>{
